# T-Programming-Language

./: CONTRIBUTING.md  Cargo.toml  README.md  auto-promote.ps1  tlang-flow.ps1
.github/workflows/: ci.yml  develop-ci.yml  feature-ci.yml  integration-ci.yml  main-ci.yml  staging-ci.yml  testing-ci.yml
app/: .gitignore  Cargo.toml  LICENSE  README.md
app/src/: main.rs
app/tests/: integration.rs
compiler/: Cargo.toml  build.rs
compiler/src/: ast_transform.rs  codegen.rs  grammar.lalrpop  ir.rs  lib.rs  main.rs  plugin_api.rs  sema.rs  tir.rs
compiler/src/backends/: mod.rs
compiler/src/backends/asm/: mod.rs
compiler/src/backends/c/: mod.rs
compiler/src/backends/clojure/: mod.rs
compiler/src/backends/cobol/: mod.rs
compiler/src/backends/cranelift/: mod.rs
compiler/src/backends/css/: mod.rs
compiler/src/backends/elixir/: mod.rs
compiler/src/backends/erlang/: mod.rs
compiler/src/backends/go/: mod.rs
compiler/src/backends/haskell/: mod.rs
compiler/src/backends/html/: mod.rs
compiler/src/backends/java/: mod.rs
compiler/src/backends/javascript/: mod.rs
compiler/src/backends/julia/: mod.rs
compiler/src/backends/kotlin/: mod.rs
compiler/src/backends/llvm_backend/: mod.rs
compiler/src/backends/lua/: mod.rs
compiler/src/backends/nim/: mod.rs
compiler/src/backends/ocaml/: mod.rs
compiler/src/backends/powershell/: mod.rs
compiler/src/backends/python/: mod.rs
compiler/src/backends/r/: mod.rs
compiler/src/backends/ruby/: mod.rs
compiler/src/backends/rust/: mod.rs
compiler/src/backends/scheme/: mod.rs
compiler/src/backends/shell/: mod.rs
compiler/src/backends/swift/: mod.rs
compiler/src/backends/typescript/: mod.rs
compiler/src/backends/v/: mod.rs
compiler/src/backends/wasm/: mod.rs
compiler/src/backends/zig/: mod.rs
compiler/src/codegen/: mod.rs
compiler/src/lexer/: comments.rs  mod.rs  mod.rs~  normalize.rs  semi.rs  shebang.rs  tests.rs  token.rs  tokenizer.rs~
compiler/src/parser/: declarations.rs  entry.rs  error.rs  expr.rs  expressions.rs  functions.rs  mod.rs  modules.rs  statements.rs  tests.rs  types.rs  utils.rs
compiler/src/runtime/: env.rs  error.rs  eval.rs  mod.rs  parser_eval_tests.rs  tests.rs  value.rs
compiler/src/safety/: analyzer.rs  mod.rs
compiler/src/types/: checker.rs  coercion.rs  inference.rs  mod.rs
docs/: Backend_Architecture.md  Build_System_and_Tooling_Architecture.md  CLI_UX.md  Code_Generation_and_Backend_Integration.md  Codegen_and_Backends_Architecture.md  Frontend_Architecture_Lexing_Parsing_and_AST.md  Frontend_Architecture—Lexing_and_Parsing.md  Frontend_Architecture—TIR_Lowering.md  Intermediate_Representation_IR_Architecture_TIR_and_Lowering.md  Intermediate_Representation_TIR.md  Language_Design_Compiler_Frontend.md  Parser_and_AST.md  Plugin_System_and_Extension_API_Architecture.md  Runtime_and_Execution_Model.md  Runtime_and_Standard_Library_Architecture.md  Semantic_Analysis_and_Type_System.md  T‑Lang_Architecture_High‑Level_Overview.md  Vision_And_Scope.md  architecture.md
docs/Sections/: 01._Pipeline_Overview_and_Data_Flow.md  02._Lowering_TIR_→_Mid‑IR.md  03._Mid‑IR_Design_and_Representation.md  04._Lowering_Mid‑IR_→_Lower‑IR_Definitions.md  05._Register_Allocation_and_Stack_Management.md  06._Instruction_Selection_and_Lowering_to_Target IR.md  07._Calling_Conventions_and_Register_API.md  08_Plugin_API_and_Backend_Interface.md  09_T-Language_Core_Syntax_and_Semantics.md  10_Standard_Library_and_Runtime.md  11_Tooling_and_BuildSystem.md  12_Compiler_Architecture_and_Pipeline.md  13_Frontend_Design_and_Language_Semantics.md  14_Runtime_and_Standard_Library.md  15_Toolchain_and_Developer_Workflow.md  16_T‑Intermediate_Representation_and_Semantic_Model.md  17_Code_Generation_and_Backends.md  18_Runtime_and_Standard_Library.md  19_Tooling_and_Developer_Experience.md  20_Release_Process_and_Versioning.md  21_Governance_and_Community.md  22_Energy_and_Performance_Modes.md  23_Scripting_and_Interactive_Mode.md  24.11_Influences_and_Resolved_Pain‑Points.md  24_Error_Handling_and_Correctness_Guarantees.md
docs/T‑Lang_Comprehensive_Architecture_and_Design_Specification/: T‑Lang_Comprehensive_Architecture_and_Design_Specification.md
errors/: Cargo.toml
errors/src/: lib.rs
example_backend/: Cargo.toml
example_backend/src/: lib.rs
examples/: hello.t  minimal_ascii.t  test.t
examples/plugin/src/: lib.rs
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
scaffold/: Cargo.toml  test_different.tlang  test_program.t  test_program.tlang
scaffold/src/: ast.rs  codegen.rs  compile.rs  diagnostics.rs  error_bridge.rs  lib.rs  main.rs  parser.rs  test_program.t  typechecker.rs
scaffold/tests/: hello.t  integration_test.rs  test1_hello.t  test2_zero.t  test3_negative.t  test4_large.t  test5_max.t  test_parse_error.t  test_type_error.t  test_type_error.tclear
shared/: Cargo.toml
shared/src/: ast.rs  fs.rs  keys.rs  lib.rs  span.rs  token.rs  tokenizer.rs  utils.rs
shared/src/ast/: ast.rs  expr.rs  item.rs  literal.rs  mod.rs  pattern.rs  program.rs  stmt.rs  types.rs
shared/src/tir/: mod.rs
tests/: integration.rs  run_cli.rs
tlang/: Cargo.toml  factorial.tl  loop.tl  quick.tl  scriptsIntegrate-Errors.ps1
tlang-lsp/: Cargo.toml
tlang-lsp/src/: main.rs  server.rs  utils.rs
tlang-lsp/src/handlers/: code_action.rs  completion.rs  definition.rs  diagnostics.rs  document_symbols.rs  hover.rs  mod.rs  references.rs  signature_help.rs
tlang/src/: cli.rs  lib.rs  main.rs  repl.rs  runner.rs  utils.rs
tlang/tests/: hello_cli.t  hello_temp.t  run_cli.rs
tstd/: Cargo.toml
tstd/src/: collections.rs  io.rs  lib.rs  math.rs  prelude.rs  process.rs
