[package]
name = "app"
version = "0.1.0"
edition = "2024"
description = "T-Lang CLI: compile T-Lang sources with selected backends."

[dependencies]
plugin_api = { path = "../plugin_api" }
example_backend = { path = "../example_backend" }
anyhow = "1.0.98"
clap           = { version = "4.5.39", features = ["derive"] }
miette         = "7.6.0"
compiler = { path = "../compiler" }
predicates = "3.1.3"
tempfile = "3.20.0"
assert_cmd = "2.0.17"