# File: compiler/Cargo.toml

[package]
name    = "compiler"
version = "0.1.0"
edition = "2024"
build   = "build.rs"

[lib]
name       = "compiler"
path       = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "compiler"
path = "src/main.rs"

[dependencies]
tstd          = { path = "../tstd" }
errors        = { path = "../errors" }
shared        = { path = "../shared" }
plugin_api    = { path = "../plugin_api" }
lalrpop-util  = "0.22.2"
anyhow        = "1.0.98"
libloading    = "0.8.8"
target-lexicon= "0.13.2"
once_cell = "1.21.3"
thiserror = "2.0.12"
miette = { version = "7.6.0", features = ["fancy"] }
log = "0.4.27"

[build-dependencies]
lalrpop       = "0.22.2"
