[package]
name = "errors"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
miette   = { version = "7.6.0"}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[features]
# Operating Systems
windows      = []
linux        = []
macos        = []
ios          = []
android      = []
embedded-os  = []

# Application types
desktop      = ["windows","linux","macos"]
mobile       = ["ios","android"]
web          = []

# Databases
db-sql       = []
db-nosql     = []
db-graph     = []
postgres     = ["db-sql"]
database     = ["db-sql","db-nosql","db-graph","postgres"]

# … and so on …
default = [
    "desktop","web","database","embedded-os","mobile"
]