[package]
name = "tlang-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
compiler = { path = "../compiler" }
shared   = { path = "../shared" }
errors   = { path = "../errors" }
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = "1.0.140"
tracing = "0.1.41"

[features]
# Operating Systems
windows      = []
linux        = []
macos        = []
ios          = []
android      = []
embedded-os  = []

# Application types
desktop      = ["windows","linux","macos"]
mobile       = ["ios","android"]
web          = []

# Databases
db-sql       = []
db-nosql     = []
db-graph     = []
postgres     = ["db-sql"]
database     = ["db-sql","db-nosql","db-graph","postgres"]

# … and so on …
default = [
    "desktop","web","database","embedded-os","mobile"
]