[package]
name = "tlang"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
compiler = { path = "../compiler" }
predicates = "3.1.3"
clap = { version = "4.5.37", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
wait-timeout = "0.2"
ntest = "0.9"

[[bin]]
name = "tlang"
path = "src/main.rs"
